fixed button vertical align

--- a/src/components/sui-button/sui-button.scss
+++ b/src/components/sui-button/sui-button.scss
@@ -1,14 +1,15 @@
 :host {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   background: $color-primary;
-  display: inline-block;
-
+  display: inline-table;
   color: #ffffff;
   border-radius: $radius;
   font-size: 16px;
-  padding: 0.6em 20px;
+  padding: 0 20px;
+  min-height: 40px;
+  vertical-align: middle;
   font-weight: bold;
-  font-family: system-ui;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   box-sizing: border-box;
   cursor: pointer;
   user-select: none;
@@ -18,17 +19,10 @@
     inset -1px -1px 2px rgb(0 0 0 / 25%),
     inset 0 0 0px 1px rgb(0 0 0 / 25%);
 
-  div {
-    display: inline-table;
-    height: 100%;
-    width: 100%;
-  }
-
-  div>slot {
+  slot {
+    line-height: 1;
     display: table-cell;
     vertical-align: middle;
-    line-height: 1em;
-    position: relative;
   }
 }
 
